--- a/Forc.toml
+++ b/Forc.toml
@@ -5,4 +5,5 @@ license = "Apache-2.0"
 name = "lib-std"
 
 [dependencies]
-"core" = { git = "http://github.com/FuelLabs/sway-lib-core" }
+# "core" = { git = "http://github.com/FuelLabs/sway-lib-core" }
+core = { git = "http://github.com/FuelLabs/sway-lib-core", branch = "joshb/pow" }
